--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,12 @@
 name: Format and Build
 on:
   push:
-  merge_group:
+    branches:
+      - '**'
   pull_request:
+    branches:
+      - '**'
+
 jobs:
   check:
     runs-on: ubuntu-latest
