--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,11 @@
 name: Test
 on:
   push:
+    branches:
+      - '**'
   pull_request:
+    branches:
+      - '**'
 jobs:
   check:
     runs-on: ubuntu-latest
