--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,13 @@
 name: Format and Build
+
 on:
   push:
     branches:
       - '**'
   pull_request:
+    branches:
+      - '**'
+  pull_request_target:
     branches:
       - '**'
   workflow_dispatch:
@@ -13,6 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: software-mansion/setup-scarb@v1
         with:
           scarb-version: "2.6.5"
