--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,8 +6,11 @@ on:
   pull_request:
     branches:
       - '**'
+  pull_request_target:
+    branches:
+      - '**'
   workflow_dispatch:
-    
+
 jobs:
   check:
     runs-on: ubuntu-latest
