--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Format, Build, and Generate Locust Summary
+name: Format and Build
 
 on:
   push:
@@ -17,39 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - uses: software-mansion/setup-scarb@v1
         with:
           scarb-version: "2.6.5"
       - run: scarb fmt --check
       - run: scarb build
-
-  generate_locust_summary:
-    runs-on: ubuntu-20.04
-    needs: check
-    steps:
-      - name: PR head repo
-        id: head_repo_name
-        run: |
-          HEAD_REPO_NAME=$(jq -r '.pull_request.head.repo.full_name' "$GITHUB_EVENT_PATH")
-          echo "PR head repo: $HEAD_REPO_NAME"
-          echo "::set-output name=repo::$HEAD_REPO_NAME"
-      - name: Checkout PR head repo
-        uses: actions/checkout@v2
-        with:
-          repository: ${{ steps.head_repo_name.outputs.repo }}
-          fetch-depth: 0
-      - name: Generate Locust summary
-        uses: simiotics/locust-action@main
-        id: locust
-        with:
-          format: html-github
-      - name: Comment on PR
-        uses: actions/github-script@v3
-        with:
-          script: |
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: '${{ steps.locust.outputs.summary }}',
-            })
