--- a/Scarb.toml
+++ b/Scarb.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2023_11"
 
 [dependencies]
-starknet = "2.6.4"
-openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.14.0" }
+starknet = "^2.7.0"
+openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.15.0" }
 alexandria_math = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
 alexandria_data_structures = { git = "https://github.com/keep-starknet-strange/alexandria.git" }
 
